<package>
  <name>hector_components_description</name>
  <version>0.5.1</version>
  <description>hector_components_description contains URDF xacro macros for robot components, so they are easily attachable to robot models.</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_components_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros_control_select_joints</run_depend>
  <run_depend>hector_gazebo_thermal_camera</run_depend>
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>hector_xacro_tools</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
