<?xml version="1.0"?>
<package format="2">
  <name>hector_models</name>
  <version>0.5.2</version>
  <description>hector_models contains (urdf) models of robots, sensors etc.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_models</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>hector_xacro_tools</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
