<?xml version="1.0"?>
<package format="2">
  <name>hector_sensors_description</name>
  <version>0.5.2</version>
  <description>hector_sensors_description contains URDF xacro macros for sensors, so they are easily attachable to robot models and usable in gazebo.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_sensors_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>hector_gazebo_thermal_camera</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
