<?xml version="1.0"?>
<package format="2">
  <name>hector_xacro_tools</name>
  <version>0.5.2</version>
  <description>hector_xacro_tools</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_xacro_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>xacro</exec_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
